i18: updated server and log startup